Add webView to see review in app and refactor not used casts after api26

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,6 @@
     <string name="gave">I gave </string>
     <string name="check_review">Check full review in the link below: </string>
     <string name="review_rating">Rate and share on Facebook</string>
+    <string name="full_review_btn">See full review!</string>
 
 </resources>
